# taskflow

./: .dockerignore  .gitignore  .mcp.json  .mise.toml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: taskflow.md
.github/workflows/: integration.yml  release.yml
.taskflow/: project.json
.taskflow/workflows/: example.yaml
agents/: architecture-reviewer.md  code-reviewer.md  context-builder.md  developer.md  devops-engineer.md  devops-reviewer.md  git-workflow.md  integration-verifier.md  product-manager.md  qa-engineer.md  qa-reviewer.md  security-reviewer.md  tech-architect.md  tech-lead.md
commands/: stop.md  tasks.md  version.md
schemas/: project-profile.json
skills/languages/: csharp.md  dart.md  elixir.md  go.md  java.md  kotlin.md  php.md  python.md  ruby.md  rust.md  swift.md  typescript.md
skills/orchestrate/: SKILL.md
src/: analytics.py  db.py  hooks.py  migrations.py  models.py  server.py  tree.py  verification.py  workflow_loader.py  workflows.py
tests/: conftest.py  test_analytics.py  test_cleanup.py  test_db.py  test_first_run_hint.py  test_hooks.py  test_migrations.py  test_models.py  test_server.py  test_tool_contract.py  test_tree.py  test_verification.py  test_workflow_loader.py  test_workflows.py
