[project]
name = "taskflow"
version = "1.0.0"
description = "Hierarchical task orchestration plugin for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
