[project]
name = "taskflow"
version = "2.2.3"
description = "Hierarchical task orchestration plugin for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/workflows.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
